src/test/ui/async-await/issues/issue-62097.stderr
error[E0521]: borrowed data escapes outside of associated function
  --> $DIR/issue-62097.rs:13:9
   |
LL |     pub async fn run_dummy_fn(&self) {
   |                               ----- `self` is a reference that is only valid in the associated function body
LL |         foo(|| self.bar()).await;
   |         ^^^^^^^^^^^^^^^^^^ `self` escapes the associated function body here

error: aborting due to previous error

